--- a/src/main/threads/threads.css
+++ b/src/main/threads/threads.css
@@ -1,3 +1,8 @@
 .threads {
     margin-top: 55px;
 }
+
+.collapsed {
+    opacity: 0.5;
+    border-bottom: 3px double #dedecd;
+}
